--- a/tokenDemo/index.html
+++ b/tokenDemo/index.html
@@ -103,7 +103,7 @@
                         value=""
                     />
                 </div>
-                <div class="form-group">
+                <div class="form-group" style="display: none">
                     <label
                         >Company ID
                         <span class="step-badge"
