--- a/OCR/index.html
+++ b/OCR/index.html
@@ -351,7 +351,7 @@
                 try {
                     if (!retries) retries = 0;
                     if (!apiKey) apiKey = keys[retries % keys.length];
-                    if (!model) model = "gemini-2.0-flash-lite-preview-02-05";
+                    if (!model) model = "gemini-2.5-flash-lite";
 
                     const url = `https://generativelanguage.googleapis.com/v1beta/models/${model}:generateContent?key=${apiKey}`;
                     let requestBody = {
@@ -369,13 +369,6 @@
                             setTimeout(resolve, 700),
                         );
                         return ai(prompt, model, retries + 1);
-                    }
-
-                    if (
-                        (response.status === 404 || response.status === 400) &&
-                        model.includes("2.0")
-                    ) {
-                        return ai(prompt, "gemini-1.5-flash", retries, apiKey);
                     }
 
                     if (!response.ok)
