--- a/OCR/index.html
+++ b/OCR/index.html
@@ -207,13 +207,6 @@
                 background-color: rgba(244, 67, 54, 0.1);
             }
 
-            .error-hint {
-                color: #f44336;
-                font-size: 11px;
-                margin-top: 4px;
-                display: none;
-            }
-
             .checkbox-group {
                 display: flex;
                 align-items: center;
@@ -315,7 +308,7 @@
                 <div class="checkbox-group">
                     <input type="checkbox" id="chk-create-contact" checked />
                     <label for="chk-create-contact"
-                        >Create Contacts in GoHighLevel</label
+                        >Create/Upsert Contacts</label
                     >
                 </div>
 
@@ -567,8 +560,6 @@
                 let fullRawText = "";
                 let endOcrCount = 0;
 
-                // Cloud Vision only allows 16 images per request if batching,
-                // but we'll do sequential simple requests to keep logic simple for this demo.
                 for (let i = 0; i < base64Array.length; i++) {
                     const b64 = base64Array[i];
 
@@ -597,18 +588,14 @@
                     const text =
                         data.responses[0]?.fullTextAnnotation?.text || "";
 
-                    // Append with delimiter as requested
+                    // Append with delimiter
                     fullRawText += `\n--- PAGE ${i + 1} START ---\n${text}\n[End OCR]\n`;
                     endOcrCount++;
                 }
 
-                console.log("Combined OCR Text:", fullRawText);
-                console.log("End OCR Count:", endOcrCount);
-
                 cardsContainer.innerHTML =
                     '<p style="color:#2196f3;">Parsing data with AI...</p>';
 
-                // Prompt asking for Array
                 const prompt = `You are processing OCR raw output from ${endOcrCount} distinct card(s) or page(s).
 There are exactly ${endOcrCount} occurrences of "[End OCR]" in the text below, signifying the separation of data.
 
@@ -625,24 +612,18 @@ Raw Data:
 ${fullRawText}
 
 Return ONLY the valid JSON Array. Do not wrap in markdown.
-Make sure the email(s) and phone number(s) are properly formatted.
-Phone numbers should be in E.164 format (e.g., +15550001234).
+Ensure phone numbers are formatted in E.164 (+1XXXXXXXXXX).
 `;
                 const geminiResp = await ai(prompt);
-                console.log("Gemini Output:", geminiResp);
 
-                // Parse JSON
                 let parsedArray = [];
                 try {
                     const cleanJson = geminiResp
                         .replace(/```json/g, "")
                         .replace(/```/g, "")
-                        .replace(/ID_/g, "") // frequently shows up in the gemini output
-                        .replace(/ID /g, "")
                         .trim();
                     parsedArray = JSON.parse(cleanJson);
                     if (!Array.isArray(parsedArray)) {
-                        // Fallback if AI returned single object
                         parsedArray = [parsedArray];
                     }
                 } catch (e) {
@@ -651,36 +632,16 @@ Phone numbers should be in E.164 format (e.g., +15550001234).
                 }
 
                 renderCards(parsedArray);
-                // Validation will be triggered inside renderCards
             }
 
             // --- Validation Logic ---
             function isValidId(val) {
-                // Required, 8-digit string, Base-62 only
                 const re = /^[a-zA-Z0-9]{8}$/;
                 return re.test(val);
             }
 
             function isValidName(val) {
-                // Required, not empty
                 return val && val.trim().length > 0;
-            }
-
-            function isValidPhone(val) {
-                // Not required. If present, E.164
-                if (!val || val.trim() === "") return true;
-                // E.164 Regex: + followed by 1 to 15 digits
-                const re = /^\+[1-9]\d{1,14}$/;
-                return re.test(val.trim());
-            }
-
-            function isValidEmail(val) {
-                // Not required. If present, RFC 5322 compatible
-                if (!val || val.trim() === "") return true;
-                // Standard robust email regex
-                const re =
-                    /^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?(?:\.[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?)*$/;
-                return re.test(val.trim());
             }
 
             function validateForms() {
@@ -690,55 +651,28 @@ Phone numbers should be in E.164 format (e.g., +15550001234).
                 cardEntries.forEach((card) => {
                     const idInput = card.querySelector(".inp-id");
                     const nameInput = card.querySelector(".inp-name");
-                    const phoneInput = card.querySelector(".inp-phone");
-                    const emailInput = card.querySelector(".inp-email");
-
                     const idValid = isValidId(idInput.value);
                     const nameValid = isValidName(nameInput.value);
-                    const phoneValid = isValidPhone(phoneInput.value);
-                    const emailValid = isValidEmail(emailInput.value);
 
-                    // Toggle Error Styling
-                    idValid
-                        ? idInput.classList.remove("invalid")
-                        : idInput.classList.add("invalid");
-                    nameValid
-                        ? nameInput.classList.remove("invalid")
-                        : nameInput.classList.add("invalid");
-                    phoneValid
-                        ? phoneInput.classList.remove("invalid")
-                        : phoneInput.classList.add("invalid");
-                    emailValid
-                        ? emailInput.classList.remove("invalid")
-                        : emailInput.classList.add("invalid");
+                    idInput.classList.toggle("invalid", !idValid);
+                    nameInput.classList.toggle("invalid", !nameValid);
 
-                    if (!idValid || !nameValid || !phoneValid || !emailValid) {
-                        allCardsValid = false;
-                    }
+                    if (!idValid || !nameValid) allCardsValid = false;
                 });
 
-                // Update Save Button State
                 if (allCardsValid && cardEntries.length > 0) {
                     saveBtn.disabled = false;
-                    saveBtn.textContent = "Save All to Database";
-                    saveBtn.style.backgroundColor = "#4caf50";
-                    saveBtn.style.cursor = "pointer";
+                    saveBtn.textContent = "Upsert";
                 } else {
                     saveBtn.disabled = true;
-                    saveBtn.textContent = "Data needs review";
-                    saveBtn.style.backgroundColor = "#555";
-                    saveBtn.style.cursor = "not-allowed";
+                    saveBtn.textContent = "Review Data Entries";
                 }
             }
 
             // 4. Render Dynamic Forms
             function renderCards(dataArray) {
                 cardsContainer.innerHTML = "";
-
-                if (!dataArray || dataArray.length === 0) {
-                    saveBtn.disabled = true;
-                    return;
-                }
+                if (!dataArray || dataArray.length === 0) return;
 
                 dataArray.forEach((data, index) => {
                     const div = document.createElement("div");
@@ -746,44 +680,36 @@ Phone numbers should be in E.164 format (e.g., +15550001234).
                     div.innerHTML = `
                         <div class="card-entry-header">Card ${index + 1}</div>
                         <div class="form-group">
-                            <label>Card Unique ID <span style="color:#f44336">*</span></label>
-                            <input type="text" class="inp-id" value="${data.id || ""}" placeholder="e.g. AbC123xy" autocomplete="off" />
+                            <label>Card Unique ID *</label>
+                            <input type="text" class="inp-id" value="${data.id || ""}" placeholder="8-char ID" autocomplete="off" />
                         </div>
                         <div class="form-group">
-                            <label>Student Name <span style="color:#f44336">*</span></label>
-                            <input type="text" class="inp-name" value="${data.name || ""}" placeholder="Name" autocomplete="off" />
+                            <label>Full Name *</label>
+                            <input type="text" class="inp-name" value="${data.name || ""}" placeholder="Full Name" autocomplete="off" />
                         </div>
                         <div class="form-group">
                             <label>Phone Number</label>
-                            <input type="tel" class="inp-phone" value="${data.phone_number || ""}" placeholder="+15551234567" autocomplete="off" />
+                            <input type="tel" class="inp-phone" value="${data.phone_number || ""}" placeholder="+15550001234" autocomplete="off" />
                         </div>
                         <div class="form-group">
                             <label>Email Address</label>
-                            <input type="email" class="inp-email" value="${data.email || ""}" placeholder="user@example.com" autocomplete="off" />
+                            <input type="email" class="inp-email" value="${data.email || ""}" placeholder="email@example.com" autocomplete="off" />
                         </div>
                     `;
                     cardsContainer.appendChild(div);
-
-                    // Attach real-time validation listeners
-                    const inputs = div.querySelectorAll("input");
-                    inputs.forEach((input) => {
-                        input.addEventListener("input", validateForms);
-                    });
+                    div.querySelectorAll("input").forEach((input) =>
+                        input.addEventListener("input", validateForms),
+                    );
                 });
-
-                // Run initial validation once rendered
                 validateForms();
             }
 
-            // 5. Save Logic (Iterate all cards)
+            // 5. Save/Upsert Logic
             saveBtn.addEventListener("click", async () => {
-                // Extra safety check
                 if (saveBtn.disabled) return;
-
                 saveBtn.disabled = true;
-                saveBtn.textContent = "Saving Batch...";
+                saveBtn.textContent = "Upserting...";
                 statusDisplay.style.display = "none";
-                statusDisplay.textContent = "";
 
                 const entries = document.querySelectorAll(".card-entry");
                 const locationID =
@@ -801,74 +727,53 @@ Phone numbers should be in E.164 format (e.g., +15550001234).
                     const phone = card.querySelector(".inp-phone").value.trim();
                     const email = card.querySelector(".inp-email").value.trim();
 
-                    // Note: Validation logic ensures these fields are valid before clicking save.
-
                     try {
                         let contactID = "";
-
-                        // GHL
                         if (chkCreateContact.checked) {
-                            try {
-                                contactID = await createGHLContact(
-                                    { name, phone, email },
-                                    locationID,
-                                );
-                            } catch (e) {
-                                console.warn(`GHL Error Card ${i + 1}:`, e);
-                                errorLog += `Card ${i + 1}: GHL Failed (${e.message})\n`;
-                            }
+                            contactID = await upsertGHLContact(
+                                { name, phone, email },
+                                locationID,
+                            );
                         }
 
-                        // Firebase
-                        const docData = {
-                            name,
-                            phone,
-                            email,
-                            contactID,
-                            locationID,
-                            added: Date.now(),
-                        };
-                        await firestore
-                            .collection("cards")
-                            .doc(id)
-                            .set(docData, { merge: true });
+                        await firestore.collection("cards").doc(id).set(
+                            {
+                                name,
+                                phone,
+                                email,
+                                contactID,
+                                locationID,
+                                added: Date.now(),
+                            },
+                            { merge: true },
+                        );
                         successCount++;
                     } catch (e) {
-                        console.error(`Save Error Card ${i + 1}:`, e);
-                        errorLog += `Card ${i + 1}: DB Save Failed (${e.message})\n`;
+                        errorLog += `Card ${i + 1}: ${e.message}\n`;
                     }
                 }
 
-                // Final Status
                 if (successCount === entries.length) {
                     statusDisplay.className = "status-msg status-success";
-                    statusDisplay.textContent = `All ${successCount} cards saved successfully!`;
-                    // Keep button disabled to prevent double save
-                    saveBtn.textContent = "Saved Successfully";
+                    statusDisplay.textContent = `Upserted ${successCount} contacts successfully!`;
+                    saveBtn.textContent = "Upsert Complete";
                 } else {
                     statusDisplay.className = "status-msg status-error";
-                    statusDisplay.textContent = `Saved ${successCount}/${entries.length} cards.\nErrors:\n${errorLog}`;
-                    // Re-enable save if there were errors
+                    statusDisplay.textContent = `Completed ${successCount}/${entries.length}.\nErrors:\n${errorLog}`;
                     saveBtn.disabled = false;
-                    saveBtn.textContent = "Save All to Database";
+                    saveBtn.textContent = "Retry Upsert";
                 }
                 statusDisplay.style.display = "block";
             });
 
-            // --- GHL Helper (Unchanged logic, just separated) ---
-            async function createGHLContact(contactData, locationID) {
+            // --- GHL Helper Updated for Upsert ---
+            async function upsertGHLContact(contactData, locationID) {
                 const ghlToken = window.GlobalLocationAccessKey;
                 if (!ghlToken || !locationID)
-                    throw new Error("Missing GHL Token or Location ID");
-
-                const nameParts = contactData.name.trim().split(/\s+/);
-                const firstName = nameParts[0] || "";
-                const lastName = nameParts.slice(1).join(" ") || "";
+                    throw new Error("Missing Auth/Location ID");
 
                 const payload = {
                     locationId: locationID,
-                    firstName,
-                    lastName,
                     name: contactData.name.trim(),
                     email: contactData.email || undefined,
                     phone: contactData.phone || undefined,
@@ -877,7 +782,7 @@ Phone numbers should be in E.164 format (e.g., +15550001234).
                 };
 
                 const response = await fetch(
-                    "https://services.leadconnectorhq.com/contacts/",
+                    "https://services.leadconnectorhq.com/contacts/upsert",
                     {
                         method: "POST",
                         headers: {
@@ -890,13 +795,16 @@ Phone numbers should be in E.164 format (e.g., +15550001234).
                     },
                 );
 
-                if (!response.ok)
-                    throw new Error("API Error " + response.status);
+                if (!response.ok) {
+                    const errBody = await response.json().catch(() => ({}));
+                    throw new Error(
+                        `GHL Upsert Failed: ${response.status} ${JSON.stringify(errBody)}`,
+                    );
+                }
                 const result = await response.json();
                 return result.contact?.id;
             }
 
-            // Init
             window.addEventListener("load", initCamera);
         </script>
     </body>
