--- a/OCR/index.html
+++ b/OCR/index.html
@@ -147,7 +147,7 @@
                 padding-bottom: 10px;
             }
 
-            /* Card Item Container */
+            /* Card Item Container - Updated for Side-by-Side */
             .card-entry {
                 background-color: #252525;
                 border: 1px solid #333;
@@ -155,6 +155,9 @@
                 padding: 20px;
                 margin-bottom: 25px;
                 position: relative;
+                display: flex; /* Flexbox for side-by-side */
+                flex-wrap: wrap; /* Wrap on small screens */
+                gap: 20px;
             }
 
             .card-entry-header {
@@ -167,6 +170,30 @@
                 border-bottom-left-radius: 8px;
                 border-top-right-radius: 8px;
                 color: #aaa;
+                z-index: 5;
+            }
+
+            .card-image-col {
+                flex: 1;
+                min-width: 200px;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+            }
+
+            .card-image-col img {
+                width: 100%;
+                height: auto;
+                border-radius: 4px;
+                border: 1px solid #444;
+                object-fit: contain;
+                max-height: 300px;
+                background: #000;
+            }
+
+            .card-form-col {
+                flex: 2;
+                min-width: 250px;
             }
 
             .form-group {
@@ -631,7 +658,8 @@ Ensure phone numbers are formatted in E.164 (+1XXXXXXXXXX).
                     throw new Error("AI response was not valid JSON.");
                 }
 
-                renderCards(parsedArray);
+                // Pass the images down to the renderer
+                renderCards(parsedArray, base64Array);
             }
 
             // --- Validation Logic ---
@@ -670,30 +698,45 @@ Ensure phone numbers are formatted in E.164 (+1XXXXXXXXXX).
             }
 
             // 4. Render Dynamic Forms
-            function renderCards(dataArray) {
+            function renderCards(dataArray, imageArray) {
                 cardsContainer.innerHTML = "";
                 if (!dataArray || dataArray.length === 0) return;
 
                 dataArray.forEach((data, index) => {
+                    // Get corresponding image (assuming 1-to-1 mapping)
+                    const imgBase64 = imageArray[index] || "";
+                    const imgSrc = imgBase64
+                        ? `data:image/jpeg;base64,${imgBase64}`
+                        : "";
+
                     const div = document.createElement("div");
                     div.className = "card-entry";
                     div.innerHTML = `
                         <div class="card-entry-header">Card ${index + 1}</div>
-                        <div class="form-group">
-                            <label>Card Unique ID *</label>
-                            <input type="text" class="inp-id" value="${data.id || ""}" placeholder="8-char ID" autocomplete="off" />
+
+                        <!-- Left Col: Image -->
+                        <div class="card-image-col">
+                             ${imgSrc ? `<img src="${imgSrc}" alt="Scanned Card Page ${index + 1}" />` : "<p>No Image</p>"}
                         </div>
-                        <div class="form-group">
-                            <label>Full Name *</label>
-                            <input type="text" class="inp-name" value="${data.name || ""}" placeholder="Full Name" autocomplete="off" />
-                        </div>
-                        <div class="form-group">
-                            <label>Phone Number</label>
-                            <input type="tel" class="inp-phone" value="${data.phone_number || ""}" placeholder="+15550001234" autocomplete="off" />
-                        </div>
-                        <div class="form-group">
-                            <label>Email Address</label>
-                            <input type="email" class="inp-email" value="${data.email || ""}" placeholder="email@example.com" autocomplete="off" />
+
+                        <!-- Right Col: Form -->
+                        <div class="card-form-col">
+                            <div class="form-group">
+                                <label>Card Unique ID *</label>
+                                <input type="text" class="inp-id" value="${data.id || ""}" placeholder="8-char ID" autocomplete="off" />
+                            </div>
+                            <div class="form-group">
+                                <label>Full Name *</label>
+                                <input type="text" class="inp-name" value="${data.name || ""}" placeholder="Full Name" autocomplete="off" />
+                            </div>
+                            <div class="form-group">
+                                <label>Phone Number</label>
+                                <input type="tel" class="inp-phone" value="${data.phone_number || ""}" placeholder="+15550001234" autocomplete="off" />
+                            </div>
+                            <div class="form-group">
+                                <label>Email Address</label>
+                                <input type="email" class="inp-email" value="${data.email || ""}" placeholder="email@example.com" autocomplete="off" />
+                            </div>
                         </div>
                     `;
                     cardsContainer.appendChild(div);
